--- a/index.html
+++ b/index.html
@@ -153,28 +153,28 @@
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-instagram" />
+                        <use href="./images/icons.svg#icon-instagram" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-twitter" />
+                        <use href="./images/icons.svg#icon-twitter" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-facebook" />
+                        <use href="./images/icons.svg#icon-facebook" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-linkedin" />
+                        <use href="./images/icons.svg#icon-linkedin" />
                       </svg>
                     </a>
                   </li>
@@ -195,28 +195,28 @@
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-instagram" />
+                        <use href="./images/icons.svg#icon-instagram" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-twitter" />
+                        <use href="./images/icons.svg#icon-twitter" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-facebook" />
+                        <use href="./images/icons.svg#icon-facebook" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-linkedin" />
+                        <use href="./images/icons.svg#icon-linkedin" />
                       </svg>
                     </a>
                   </li>
@@ -237,28 +237,28 @@
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-instagram" />
+                        <use href="./images/icons.svg#icon-instagram" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-twitter" />
+                        <use href="./images/icons.svg#icon-twitter" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-facebook" />
+                        <use href="./images/icons.svg#icon-facebook" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-linkedin" />
+                        <use href="./images/icons.svg#icon-linkedin" />
                       </svg>
                     </a>
                   </li>
@@ -279,28 +279,28 @@
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-instagram" />
+                        <use href="./images/icons.svg#icon-instagram" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-twitter" />
+                        <use href="./images/icons.svg#icon-twitter" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-facebook" />
+                        <use href="./images/icons.svg#icon-facebook" />
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-icon">
                     <a href="#" class="social-media-link"
                       ><svg class="icon-svg" width="16" height="16">
-                        <use href="./images/icons2.svg#icon-linkedin" />
+                        <use href="./images/icons.svg#icon-linkedin" />
                       </svg>
                     </a>
                   </li>
@@ -455,42 +455,48 @@
             <li class="social-media-icon">
               <a href="#" class="footer-social-media-link"
                 ><svg class="icon-svg" width="24" height="24">
-                  <use href="./images/icons2.svg#icon-instagram" />
+                  <use href="./images/icons.svg#icon-instagram" />
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="#" class="footer-social-media-link"
                 ><svg class="icon-svg" width="24" height="24">
-                  <use href="./images/icons2.svg#icon-twitter" />
+                  <use href="./images/icons.svg#icon-twitter" />
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="#" class="footer-social-media-link">
                 <svg class="icon-svg" width="24" height="24">
-                  <use href="./images/icons2.svg#icon-facebook" />
+                  <use href="./images/icons.svg#icon-facebook" />
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="#" class="footer-social-media-link"
                 ><svg class="icon-svg" width="24" height="24">
-                  <use href="./images/icons2.svg#icon-linkedin" />
+                  <use href="./images/icons.svg#icon-linkedin" />
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div>
-          <form>
+        <div class="form-container">
+          <p class="form-paragraph">Subscribe</p>
+          <form class="form">
             <label class="form-label">
               <input
                 class="form-input"
-                type="text"
+                type="email"
                 name="email_adress"
                 placeholder="E-mail" /></label
-            ><button class="form-button" type="submit">Subscribe</button>
+            ><button class="form-button" type="submit">
+              Subscribe
+              <svg class="form-button-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame4" />
+              </svg>
+            </button>
           </form>
         </div>
       </div>
