--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
               <input
                 class="form-input"
                 type="email"
-                name="email_adress"
+                name="email-adress"
                 placeholder="E-mail" /></label
             ><button class="form-button" type="submit">
               Subscribe
@@ -501,5 +501,60 @@
         </div>
       </div>
     </footer>
+    <div class="modal-window-container">
+      <div class="modal-form-container">
+        <button type="button" class="modal-form-button">
+          <svg class="modal-icon-svg" width="8" height="8"><use href="" /></svg>
+        </button>
+        <p class="modal-form-paragraph"></p>
+        <form>
+          <div class="modal-form-form">
+            <label class="modal-form-label" for="user-name">Name
+            <div class="input-and-icon">
+              <input
+                class="input"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="input-icon-svg">
+                <use href="" />
+              </svg>
+            </label>
+            </div>
+          </div>
+          <div class="modal-form-form">
+            <label class="modal-form-label" for="user-name">Phone
+            <div class="input-and-icon">
+              <input
+                class="input"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="input-icon-svg">
+                <use href="" />
+              </svg>
+              </label>
+            </div>
+          </div>
+          <div class="modal-form-form">
+            <label class="modal-form-label" for="user-name">Email
+            <div class="input-and-icon">
+              <input
+                class="input"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="input-icon-svg">
+                <use href="" />
+              </svg>
+              </label>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
