--- a/index.html
+++ b/index.html
@@ -509,7 +509,9 @@
         <button type="button" class="modal-close-button">
           <svg class="modal-icon-svg" width="8" height="8"><use href="" /></svg>
         </button>
-        <p class="modal-form-paragraph"></p>
+        <p class="modal-form-text">
+          Leave your contacts and we will call you back
+        </p>
         <form>
           <div class="modal-form">
             <label class="modal-form-label" for="user-name">Name</label>
@@ -554,7 +556,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-form">
+          <div class="modal-form1">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               id="user-comment"
@@ -563,7 +565,7 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="modal-form">
+          <div class="modal-form2">
             <input
               type="checkbox"
               id="user-privacy"
