--- a/index.html
+++ b/index.html
@@ -507,7 +507,9 @@
     <div class="modal-container">
       <div class="modal-window">
         <button type="button" class="modal-close-button">
-          <svg class="modal-icon-svg" width="8" height="8"><use href="" /></svg>
+          <svg class="modal-icon-svg" width="8" height="8">
+            <use href="./images/icons.svg#icon-close" />
+          </svg>
         </button>
         <p class="modal-form-text">
           Leave your contacts and we will call you back
@@ -524,7 +526,7 @@
                 class="modal-input"
               />
               <svg class="input-icon-svg" width="18" height="24">
-                <use href="" />
+                <use href="./images/icons.svg#icon-user" />
               </svg>
             </div>
           </div>
@@ -538,7 +540,7 @@
                 name="user-name"
               />
               <svg class="input-icon-svg" width="18" height="24">
-                <use href="" />
+                <use href="./images/icons.svg#icon-phone" />
               </svg>
             </div>
           </div>
@@ -552,11 +554,11 @@
                 name="user-name"
               />
               <svg class="input-icon-svg" width="18" height="24">
-                <use href="" />
+                <use href="./images/icons.svg#icon-email" />
               </svg>
             </div>
           </div>
-          <div class="modal-form1">
+          <div class="modal-comment">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               id="user-comment"
@@ -565,7 +567,7 @@
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="modal-form2">
+          <div class="modal-checkbox">
             <input
               type="checkbox"
               id="user-privacy"
@@ -574,8 +576,11 @@
               value="true"
             />
             <label for="user-privacy" class="modal-checkbox-label">
-              <span class="checkbox-span"></span>
-              I accept the terms and conditions of the
+              <span class="checkbox-span">
+                <svg width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkbox" />
+                </svg> </span
+              >I accept the terms and conditions of the
               <a class="privacy-policy" href="index.html">Privacy Policy</a>
             </label>
           </div>
