--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         </p>
         <form>
           <div class="modal-form">
-            <label class="modal-form-label" for="user-name">Name</label>
+            <label class="modal-form-label" for="username">Name</label>
             <div class="input-container">
               <input
                 class="modal-input"
@@ -531,27 +531,22 @@
             </div>
           </div>
           <div class="modal-form">
-            <label class="modal-form-label" for="user-name">Phone</label>
+            <label class="modal-form-label" for="phone">Phone</label>
             <div class="input-container">
-              <input
-                class="modal-input"
-                type="text"
-                id="user-name"
-                name="user-name"
-              />
+              <input class="modal-input" type="text" id="phone" name="phone" />
               <svg class="input-icon-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone" />
               </svg>
             </div>
           </div>
           <div class="modal-form">
-            <label class="modal-form-label" for="user-name">Email</label>
+            <label class="modal-form-label" for="email">Email</label>
             <div class="input-container">
               <input
                 class="modal-input"
                 type="text"
-                id="user-name"
-                name="user-name"
+                id="email-adress"
+                name="email-adress"
               />
               <svg class="input-icon-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-email" />
