--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         </p>
         <form>
           <div class="modal-form">
-            <label class="modal-form-label" for="username">Name</label>
+            <label class="modal-form-label" for="user-name">Name</label>
             <div class="input-container">
               <input
                 class="modal-input"
