--- a/index.html
+++ b/index.html
@@ -523,7 +523,6 @@
                 type="text"
                 id="user-name"
                 name="user-name"
-                class="modal-input"
               />
               <svg class="input-icon-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-user" />
@@ -540,7 +539,7 @@
             </div>
           </div>
           <div class="modal-form">
-            <label class="modal-form-label" for="email">Email</label>
+            <label class="modal-form-label" for="email-adress">Email</label>
             <div class="input-container">
               <input
                 class="modal-input"
