--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
             ><button class="open-button" type="submit">
               Subscribe
               <svg class="form-button-svg" width="24" height="24">
-                <use href="./images/icons.svg#icon-frame4" />
+                <use href="./images/icons.svg#icon-subscribe" />
               </svg>
             </button>
           </form>
