--- a/index.html
+++ b/index.html
@@ -569,13 +569,13 @@
               class="modal-checkbox-input visually-hidden"
               value="true"
             />
-            <label for="user-privacy" class="modal-checkbox-label"
-              >I accept the terms and conditions of the
+            <label for="user-privacy" class="modal-checkbox-label">
               <span class="checkbox-span">
                 <svg width="10" height="8">
                   <use href="./images/icons.svg#icon-check" />
                 </svg>
               </span>
+              I accept the terms and conditions of the
               <a class="privacy-policy" href="#">Privacy Policy</a>
             </label>
           </div>
